# laba6

./: CMakeLists.txt  CPackConfig.cmake  CPackConfig.cmake\  DESCRIPTION  README.md
.github/workflows/: cmake.yml  release.yml
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp
banking/tests/: test_banking.cpp
solver_lib/: CMakeLists.txt
